# window

./: .editorconfig  .gitignore  Cargo.toml  README.md
js/client/: .eslintrc.json  package.json
js/client/.config/: forge.config.js  webpack.renderer.config.js
js/client/src/: index.ts  preload.ts  renderer.ts
js/client/src/render/: App.tsx  Routes.tsx  index.css
js/client/src/render/components/: Footer.tsx  NavBar.tsx
js/client/src/render/routes/: About.tsx  Contact.tsx  Home.tsx  Todo.tsx  index.ts
js/server/: .eslintrc.json  package.json  tsconfig.json
js/server/src/: index.ts  media.ts
src/: lib.rs  main.rs
src/controller/: mod.rs
src/media/: manager.rs  mod.rs
