[package]
name = "driver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
serde = { version = "1.0.79", features = ["derive"] }
serde_json = "1.0.79"
[dependencies.windows]
version = "0.34.0"
features = [
  "Foundation",
  "Media_Control",
]